content/docs/0.12.x/reference/cli/commands/keptn_auth.md
---
date: "2021-11-25T14:20:40Z"
title: "keptn auth"
slug: keptn_auth
---
## keptn auth

Authenticates the Keptn CLI against a Keptn installation

### Synopsis

Authenticates the Keptn CLI against a Keptn installation using an endpoint and an API token. 
The endpoint and API token are automatically configured during the Keptn installation.
If the authentication is successful, the endpoint and the API token are stored in a password store of the underlying operating system.
More precisely, the Keptn CLI stores the endpoint and API token using *pass* in case of Linux, using *Keychain* in case of macOS, or *Wincred* in case of Windows.

**Note:** If you receive a warning *Using a file-based storage for the key because the password-store seems to be not set up.* this is because a password store could not be found in your environment. In this case, the credentials are stored in *~/.keptn/.keptn* in your home directory.
	

```
keptn auth --endpoint=https://api.keptn.MY.DOMAIN.COM --api-token=SECRET_TOKEN [flags]
```

### Examples

```
keptn auth --endpoint=https://api.keptn.MY.DOMAIN.COM --api-token=abcd-0123-wxyz-7890
keptn auth				# Automatically fetch the endpoint & api-token from current kubernetes context
keptn auth --secure			# Authenticates against the https endpoint
keptn auth --skip-namespace-listing # To skip the listing of namespaces and use the namespace passed with "--namespace" flag (default namespace is 'keptn')

```

### Options

```
  -a, --api-token string         The API token to communicate with the Keptn installation
  -e, --endpoint string          The endpoint exposed by the Keptn installation (e.g., api.keptn.127.0.0.1.xip.io)
  -c, --export                   To export the current cluster config i.e API token and Endpoint
  -s, --secure                   To make http/https request to auto fetched endpoint while authentication
  -i, --skip-namespace-listing   To skip the listing of namespaces and use the namespace passed with "--namespace" flag (default namespace is 'keptn')
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn

###### Auto generated by spf13/cobra on 25-Nov-2021
